--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,15 @@ body {
   background-color: darkgrey;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 #root {
   background-color: lightgrey;
+}
+
+.toolbar {
+  display: flex;
+  flex-direction: column;
+  margin: 2px;
 }
